--- a/css/css.css
+++ b/css/css.css
@@ -520,6 +520,52 @@ h1{
       	
       }
       
+      /* show video style*/
+      
+      .show{
+          width: 100%;
+          height: 100%;
+          position: fixed;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%,-50%);
+          background: rgba(0,0,0,0.8);
+          display: none;
+          transition: 0.5s;
+      }
+      .show.active{
+          display: block;
+          z-index: 999999;
+      }
+      .show video{
+          width: 100%;
+          height: 100%;
+      }
+      
+      .show button{
+          width: 60px;
+          height: 60px;
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          transform: translate(-50%,-50%);
+          background: #3C5795;
+          color:#fff;
+          border: none;
+          outline: none;
+          border-radius: 50%;
+          z-index: 99999;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 1.8em;
+          overflow: hidden;
+      }
+      .show .button:hover{
+          background: #fff;
+          color: #c1c1c198;
+      }
+      
       
     /*box of works style*/    
     h1{
@@ -608,9 +654,10 @@ h1{
     .my_works .thumb i{
         margin: 10px 10px;
         padding: 5px 10px;
-        transform: translateY(0px);
         color: #c8c8c8;
+        
     }
+    
    /* .my_works .box:hover i{
         transform: translateY(0px);
         transition:all 0.5s;
@@ -677,8 +724,6 @@ h1{
  }
      .connect .container .box input{
      font-size:0.8em;
-    
-     
      height: 50px;
     
  }
@@ -724,7 +769,81 @@ h1{
       .connect.active .container:after{
        transform: translate(30%,10%);
     }
+    
+    .about{
+        width: 100%;
+        height: 100%;
+        background: #262626;
+        position: relative;
+    }
+    .about .about_me{
+        width: 100%;
+        display: block;
+        padding: 20px 0;
+    }
+    .about_me .about_me .box_b{
+        width: 90%;
+        height: 100%;
+        position:relative;
+    }
+    .about .about_me .box_b .box_about{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 26px 40px;
+        font-family: b;
+        width: 80%;
+        height: 50px;
+        line-height: 40px;
+        /*border-bottom: 1px solid #3C5795;*/
+        border-radius: 20px;
+        color: #fff;
+        position: relative;
+        text-align: center;
+        background: #3C5795;
+    }
+    .about .about_me .box_b .box_about:before{
+      content: '';
+      position: absolute;
+      top: calc(100% / 10px);
+      left: -20px;
+      width: 15px;
+      height: 15px;
+      background: #3C5795;
+      border-radius: 50%;
+     
+      
+    }
+    .about .about_me .box_b .box_about:after{
+      content: '';
+      position: absolute;
+      top: -50px;
+      left: -15px;
+      width: 3px;
+      height: 80px;
+      background: #3C5795;
+      border-radius: 5px;
+    }
+    .about .about_me .box_b:nth-child(1) .box_about:after{
+      width: 0px;
+      height: 0px;
+    }
+    .about .about_me .box_b .box_about i{
+        
+        font-size: 1.1em;
+    }
+    .about .about_me .box_b .box_about span{
+        
+        width: 3px;
+        height: 100%;
+        background: #3C5795;
+        position: absolute;
+        top: 0;
+        left: -20px;
+        border-radius: 5px;
+    }
 }
+
 @keyframes trans{
     0%{
         transform: translateY(-60px);
