--- a/css/css.css
+++ b/css/css.css
@@ -780,6 +780,7 @@ h1{
         width: 100%;
         display: block;
         padding: 20px 0;
+        overflow: hidden;
     }
     .about_me .about_me .box_b{
         width: 90%;
@@ -801,6 +802,13 @@ h1{
         position: relative;
         text-align: center;
         background: #3C5795;
+        transform: translateY(100px);
+        opacity: 0;
+        transition: 0.5s;
+    }
+    .about .about_me .box_b .box_about.active{
+        transform: translateY(0px);
+        opacity: 1;
     }
     .about .about_me .box_b .box_about:before{
       content: '';
@@ -811,18 +819,57 @@ h1{
       height: 15px;
       background: #3C5795;
       border-radius: 50%;
-     
-      
+     transform: scale(0);
+      transition: 0.5s;
+    }
+    .about .about_me .box_b .box_about.active:before{
+         transform: scale(1);
+    }
+    .about .about_me .box_b .box_about.active:nth-child(1):before{
+         transition-delay: 0.5s;
+    }
+    .about .about_me .box_b .box_about.active:nth-child(2):before{
+         transition-delay: 0.6s;
+    }
+    .about .about_me .box_b .box_about.active:nth-child(3):before{
+         transition-delay: 0.7s;
+    }
+    .about .about_me .box_b .box_about.active:nth-child(4):before{
+         transition-delay: 0.8s;
+    }
+    .about .about_me .box_b .box_about.active:nth-child(5):before{
+         transition-delay: 0.9s;
     }
     .about .about_me .box_b .box_about:after{
       content: '';
       position: absolute;
-      top: -50px;
+      top: -20px;
       left: -15px;
       width: 3px;
-      height: 80px;
+      height: 10px;
       background: #3C5795;
       border-radius: 5px;
+      transform: translateY(-50px);
+      transition: 0.5s;
+      opacity: 0;
+    }
+    .about .about_me .box_b.active .box_about:after{
+      transform: translateY(0px);
+      opacity: 1;
+      top: -50px;
+      height: 80px;
+    }
+    .about .about_me .box_b:nth-child(2).active .box_about:after{
+      transition-delay: 0.5s;
+    }
+    .about .about_me .box_b:nth-child(3).active .box_about:after{
+      transition-delay: 0.6s;
+    }
+    .about .about_me .box_b:nth-child(4).active .box_about:after{
+      transition-delay: 0.7s;
+    }
+    .about .about_me .box_b:nth-child(5).active .box_about:after{
+      transition-delay: 0.8s;
     }
     .about .about_me .box_b:nth-child(1) .box_about:after{
       width: 0px;
