--- a/css/css.css
+++ b/css/css.css
@@ -787,6 +787,10 @@ h1{
         height: 100%;
         position:relative;
     }
+    .about_me .about_me .box_ba.active:nth-child(3){
+        transition: 0.5s;
+    }
+    
     .about .about_me .box_b .box_about{
         display: flex;
         align-items: center;
@@ -802,10 +806,31 @@ h1{
         position: relative;
         text-align: center;
         background: #3C5795;
-        transform: translateY(100px);
+        transform: translateY(300px);
         opacity: 0;
         transition: 0.5s;
     }
+    .about .about_me .box_b:nth-child(1) .box_about{
+        transform: translateY(-100px);
+        transition: .5s;
+    }
+    .about .about_me .box_b:nth-child(2) .box_about{
+        
+        transition: 0.8s;
+    }
+    .about .about_me .box_b:nth-child(3) .box_about{
+        
+        transition: 1.1s;
+    }
+    .about .about_me .box_b:nth-child(4) .box_about{
+        
+        transition: 1.4s;
+    }
+    .about .about_me .box_b:nth-child(5) .box_about{
+        
+        transition: 1.7s;
+    }
+   
     .about .about_me .box_b .box_about.active{
         transform: translateY(0px);
         opacity: 1;
@@ -826,19 +851,19 @@ h1{
          transform: scale(1);
     }
     .about .about_me .box_b .box_about.active:nth-child(1):before{
-         transition-delay: 0.5s;
+         transition: 0.1s;
     }
     .about .about_me .box_b .box_about.active:nth-child(2):before{
-         transition-delay: 0.6s;
+         transition: 0.8s;
     }
     .about .about_me .box_b .box_about.active:nth-child(3):before{
-         transition-delay: 0.7s;
+         transition: 1.1s;
     }
     .about .about_me .box_b .box_about.active:nth-child(4):before{
-         transition-delay: 0.8s;
+         transition: 1.4s;
     }
     .about .about_me .box_b .box_about.active:nth-child(5):before{
-         transition-delay: 0.9s;
+         transition: 1.7s;
     }
     .about .about_me .box_b .box_about:after{
       content: '';
@@ -846,30 +871,31 @@ h1{
       top: -20px;
       left: -15px;
       width: 3px;
-      height: 10px;
+      height: 0px;
       background: #3C5795;
       border-radius: 5px;
-      transform: translateY(-50px);
+      transform: translateY(-1050px);
       transition: 0.5s;
       opacity: 0;
     }
     .about .about_me .box_b.active .box_about:after{
       transform: translateY(0px);
       opacity: 1;
-      top: -50px;
+      top: -58px;
       height: 80px;
     }
-    .about .about_me .box_b:nth-child(2).active .box_about:after{
-      transition-delay: 0.5s;
+    .about .about_me .box_b:nth-child(2) .box_about.active:after{
+      transition: 0.5s;
     }
-    .about .about_me .box_b:nth-child(3).active .box_about:after{
-      transition-delay: 0.6s;
+    .about .about_me .box_b:nth-child(3) .box_about.active:after{
+      transition: .8s;
     }
-    .about .about_me .box_b:nth-child(4).active .box_about:after{
-      transition-delay: 0.7s;
+    .about .about_me .box_b:nth-child(4) .box_about.active:after{
+      transition: 1.1s;
     }
-    .about .about_me .box_b:nth-child(5).active .box_about:after{
-      transition-delay: 0.8s;
+    .about .about_me .box_b:nth-child(5) .box_about.active:after{
+      transition:1.4s;
+      
     }
     .about .about_me .box_b:nth-child(1) .box_about:after{
       width: 0px;
