--- a/css/css.css
+++ b/css/css.css
@@ -34,6 +34,10 @@ body.active{
     height: 100%;
     margin-left: 10px;
 }
+.start-begin .logo font{
+    background: #3C5795;
+    padding: 10px;
+}
 .start-begin ul{
     display: flex;
     padding: 0;
@@ -222,7 +226,7 @@ h1{
         width: 100%;
         height: 100%;
         text-align: center;
-        display: inline-block;
+        display: block;
     }
 .my_works .box_work{
         width: 90%;
@@ -262,7 +266,7 @@ h1{
  
  .connect{
      width:100%;
-     height: 600px;
+     height: 800px;
      display: flex;
      justify-content: center;
      align-items: center;
@@ -380,8 +384,25 @@ h1{
      font-size: 2em;
  }
  
- 
-    
+ .visitors{
+     background-image: url('../imgs/img1_2.jpg');
+     width: 100%;
+     height: 300px;
+     position: relative;
+     background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+ }
+.visitors:after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:100%;
+    height:100%;
+    background: linear-gradient(50deg,#CC2B5E,#753A88);
+    opacity: 0.5;
+}
     
 @media (max-width :500px){
     .start-begin{
@@ -586,14 +607,6 @@ h1{
         transform: translateX(-120%);
         transition: 0.5s;
     }
-    .my_works .box_work{
-        width: 90%;
-        padding: 10px 0;
-        margin: 50px auto;
-        box-shadow: 3px 5px 30px #b3b3b3;
-        transform: translateX(-120%) rotate(30deg);
-        transition: 0.5s;
-    }
     .my_works .box_work:nth-child(1){
         
         transform: translateX(-120%);
@@ -724,15 +737,37 @@ h1{
     .my_works .thumb{
         font-size: 1.6em;
         margin-top: 15px;
-        overflow: hidden;
+        display: flex;
+        width: 100%;
     }
     .my_works .thumb i{
-        margin: 10px 10px;
+        margin: 10px 30px;
         padding: 5px 10px;
         color: #c8c8c8;
         
     }
-    
+    .my_works .thumb .fath{
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        position: relative;
+    }
+    .my_works .thumb .fath:nth-child(1):before{
+        content: 'preview';
+        position: absolute;
+        top:-20px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #262626;
+        color: #fff;
+        z-index: 1;
+        font-size: 0.9em;
+        margin: 10px 20px;
+        line-height: 70px;
+        font-family: b;
+        border-radius: 20px;
+    }
    /* .my_works .box:hover i{
         transform: translateY(0px);
         transition:all 0.5s;
@@ -848,7 +883,7 @@ h1{
     .about{
         width: 100%;
         height: 100%;
-        background: #262626;
+        /*background: #262626;*/
         position: relative;
     }
     .about .about_me{
@@ -990,6 +1025,165 @@ h1{
         left: -20px;
         border-radius: 5px;
     }
+    
+    .about .about_conversion{
+        width: 90%;
+        height: 0px;
+        background: #292929;
+        color: #fff;
+        display: none;
+        position: absolute;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%,-50%) scale(0);
+        border: 2px solid #204a70;
+        transition: 0.5s;
+        border-radius: 5px;
+    }
+    .about .about_conversion.active{
+        transform: translate(-50%,-50%) scale(1);
+        transition: 0.5s;
+        height: 200px;
+        animation: ani_box 0.3s linear;
+    }
+    .main_pop_up{
+        width: 100%;
+        height: 100vh;
+        background: #fff;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        display:none;
+        z-index: 99999;
+        transition: 0.5s;
+    }
+    .pop_up{
+        width: 90%;
+        height: 220px;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        background: #3C5795;
+        color: #fff;
+        border-top-left-radius: 50px;
+        box-shadow: 4px 6px 20px #2c2c2c;
+        text-align: center;
+        border-radius: 50px;
+    }
+    .pop_up .profile{
+        background: #1488CC;
+        width: 100%;
+        height: 50px;
+        border-top-left-radius: 50px;
+        margin-top: -10px;
+        line-height: 50px;
+    }
+    .pop_up p{
+        width: 100%;
+        height: 200px;
+        background: #3C5795;
+        margin-top: 10px;
+        font-size: 1.1em;
+        line-height: 25px;
+        font-family: b;
+        
+    }
+    .pop_up span:nth-child(1){
+        position: absolute;
+        right: 0;
+        top: -70px;    
+        width: 50px;
+        height: 100px;
+        border-radius: 20px;
+        background: #1488CC;
+        text-align: center;
+        line-height: 50px;
+        font-size: 1.8em;
+    
+        transition: 2s;
+    }
+    .pop_up.active span:nth-child(1){
+        top: -70px;
+    }
+    .pop_up span:nth-child(2){
+        position: absolute;
+        right: 50px;
+        bottom: -90px;    
+        width: 30px;
+        height: 70px;
+        border-radius: 20px;
+        background: #3C5795;
+        text-align: center;
+        line-height: 50px;
+        font-size: 1.8em;
+    }
+    .pop_up span:nth-child(3){
+        position: absolute;
+        right: 180px;
+        bottom: -70px;    
+        width: 10px;
+        height: 50px;
+        border-radius: 20px;
+        background: #3C5795;
+        text-align: center;
+        line-height: 50px;
+        font-size: 1.8em;
+    }
+    .pop_up span:nth-child(4){
+        position: absolute;
+        right: 250px;
+        bottom: -60px;    
+        width: 10px;
+        height: 50px;
+        border-radius: 20px;
+        background: #3C5795;
+        text-align: center;
+        line-height: 50px;
+        font-size: 1.8em;
+    }
+    .main_pop_up .popup_list{
+        padding: 0;
+        margin: 0;
+        display: flex;
+    }
+    .main_pop_up .popup_list li{
+        list-style: none;
+        position: absolute;
+        bottom: -10%;
+        left: 5%;
+        width: 30px;
+        height: 30px;
+        background: rgba(0,0,0,0.1);
+        animation: li-anime 5s linear infinite;
+        z-index: -1;
+    }
+    .main_pop_up .popup_list li:nth-child(2){
+        animation-delay: 2s;
+        width: 50px;
+        height: 50px;
+        left: 20%;
+    }
+    .main_pop_up .popup_list li:nth-child(3){
+        animation-delay: 0.6s;
+        width: 20px;
+        height: 20px;
+        left: 60%;
+        left: 60%;
+    }
+    .main_pop_up .popup_list li:nth-child(4){
+        animation-delay: 1.3s;
+        width: 30px;
+        height: 30px;
+        left: 90%;
+    }
+    .main_pop_up .popup_list li:nth-child(5){
+        animation-delay: 1.3s;
+        width: 30px;
+        height: 30px;
+        left: 50%;
+    }
 }
 
 @keyframes trans{
@@ -998,5 +1192,23 @@ h1{
     }
     100%{
         transform: translateY(0px);
+    }
+}
+@keyframes ani_box{
+    0%{
+     transform:translate(-50%,-50%) scale(0);
+    }
+    100%{
+        transform:translate(-50%,-50%) scale(1);
+    }
+}
+@keyframes li-anime{
+    0%{
+        bottom: -10%;
+    }
+    100%{
+        bottom: 100%;
+        border-radius: 10px;
+        transform: rotate(90deg);
     }
 }
