--- a/css/css.css
+++ b/css/css.css
@@ -403,7 +403,324 @@ h1{
     background: linear-gradient(50deg,#CC2B5E,#753A88);
     opacity: 0.5;
 }
+
+        .about{
+        width: 100%;
+        height: 100%;
+        /*background: #262626;*/
+        position: relative;
+    }
+    .about .about_me{
+        width: 100%;
+        display: block;
+        padding: 20px 0;
+        overflow: hidden;
+    }
+    .about_me .about_me .box_b{
+        width: 90%;
+        height: 100%;
+        position:relative;
+    }
+    .about_me .about_me .box_ba.active:nth-child(3){
+        transition: 0.5s;
+    }
     
+    .about .about_me .box_b .box_about{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 26px 40px;
+        font-family: b;
+        width: 80%;
+        height: 50px;
+        line-height: 40px;
+        /*border-bottom: 1px solid #3C5795;*/
+        border-radius: 20px;
+        color: #fff;
+        position: relative;
+        text-align: center;
+        background: #3C5795;
+        transform: translateY(300px);
+        opacity: 0;
+        transition: 0.5s;
+    }
+    .about .about_me .box_b:nth-child(1) .box_about{
+        transform: translateY(-100px);
+        transition: .5s;
+    }
+    .about .about_me .box_b:nth-child(2) .box_about{
+        
+        transition: 0.8s;
+    }
+    .about .about_me .box_b:nth-child(3) .box_about{
+        
+        transition: 1.1s;
+    }
+    .about .about_me .box_b:nth-child(4) .box_about{
+        
+        transition: 1.4s;
+    }
+    .about .about_me .box_b:nth-child(5) .box_about{
+        
+        transition: 1.7s;
+    }
+   
+    .about .about_me .box_b .box_about.active{
+        transform: translateY(0px);
+        opacity: 1;
+    }
+    .about .about_me .box_b .box_about:before{
+      content: '';
+      position: absolute;
+      top: calc(100% / 10px);
+      left: -20px;
+      width: 15px;
+      height: 15px;
+      background: #3C5795;
+      border-radius: 50%;
+     transform: scale(0);
+      transition: 0.5s;
+    }
+    .about .about_me .box_b .box_about.active:before{
+         transform: scale(1);
+    }
+    .about .about_me .box_b .box_about.active:nth-child(1):before{
+         transition: 0.1s;
+    }
+    .about .about_me .box_b .box_about.active:nth-child(2):before{
+         transition: 0.8s;
+    }
+    .about .about_me .box_b .box_about.active:nth-child(3):before{
+         transition: 1.1s;
+    }
+    .about .about_me .box_b .box_about.active:nth-child(4):before{
+         transition: 1.4s;
+    }
+    .about .about_me .box_b .box_about.active:nth-child(5):before{
+         transition: 1.7s;
+    }
+    .about .about_me .box_b .box_about:after{
+      content: '';
+      position: absolute;
+      top: -20px;
+      left: -15px;
+      width: 3px;
+      height: 0px;
+      background: #3C5795;
+      border-radius: 5px;
+      transform: translateY(-1050px);
+      transition: 0.5s;
+      opacity: 0;
+    }
+    .about .about_me .box_b.active .box_about:after{
+      transform: translateY(0px);
+      opacity: 1;
+      top: -58px;
+      height: 80px;
+    }
+    .about .about_me .box_b:nth-child(2) .box_about.active:after{
+      transition: 0.5s;
+    }
+    .about .about_me .box_b:nth-child(3) .box_about.active:after{
+      transition: .8s;
+    }
+    .about .about_me .box_b:nth-child(4) .box_about.active:after{
+      transition: 1.1s;
+    }
+    .about .about_me .box_b:nth-child(5) .box_about.active:after{
+      transition:1.4s;
+      
+    }
+    .about .about_me .box_b:nth-child(1) .box_about:after{
+      width: 0px;
+      height: 0px;
+    }
+    .about .about_me .box_b .box_about i{
+        
+        font-size: 1.1em;
+    }
+    .about .about_me .box_b .box_about span{
+        
+        width: 3px;
+        height: 100%;
+        background: #3C5795;
+        position: absolute;
+        top: 0;
+        left: -20px;
+        border-radius: 5px;
+    }
+    
+    .about .about_conversion{
+        width: 90%;
+        height: 0px;
+        background: #292929;
+        color: #fff;
+        display: none;
+        position: absolute;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%,-50%) scale(0);
+        border: 2px solid #204a70;
+        transition: 0.5s;
+        border-radius: 5px;
+    }
+    .about .about_conversion.active{
+        transform: translate(-50%,-50%) scale(1);
+        transition: 0.5s;
+        height: 200px;
+        animation: ani_box 0.3s linear;
+    }
+    .main_pop_up{
+        width: 100%;
+        height: 100vh;
+        background: #fff;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        display:none;
+        z-index: 99999;
+        transition: 0.5s;
+    }
+    .pop_up{
+        width: 90%;
+        height: 300px;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        background: #3C5795;
+        color: #fff;
+        border-top-left-radius: 50px;
+        box-shadow: 4px 6px 20px #2c2c2c;
+        text-align: center;
+        border-radius: 50px;
+    }
+    .pop_up .profile{
+        background: #1488CC;
+        width: 100%;
+        height: 50px;
+        border-top-left-radius: 50px;
+        margin-top: -10px;
+        line-height: 50px;
+    }
+    .pop_up .p1{
+        width: 100%;
+        height: 300px;
+        background: #3C5795;
+        margin-top: 10px;
+        font-size: 1.1em;
+        line-height: 25px;
+        font-family: b;
+        
+    }
+    .pop_up .p2{
+        position: absolute;
+        bottom: -50px;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
+    .pop_up h3{
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
+    .pop_up span:nth-child(1){
+        position: absolute;
+        right: 0;
+        top: -70px;    
+        width: 50px;
+        height: 100px;
+        border-radius: 20px;
+        background: #1488CC;
+        text-align: center;
+        line-height: 50px;
+        font-size: 1.8em;
+    
+        transition: 2s;
+    }
+    .pop_up.active span:nth-child(1){
+        top: -70px;
+    }
+    .pop_up span:nth-child(2){
+        position: absolute;
+        right: 50px;
+        bottom: -90px;    
+        width: 30px;
+        height: 70px;
+        border-radius: 20px;
+        background: #3C5795;
+        text-align: center;
+        line-height: 50px;
+        font-size: 1.8em;
+    }
+    .pop_up span:nth-child(3){
+        position: absolute;
+        right: 180px;
+        bottom: -70px;    
+        width: 10px;
+        height: 50px;
+        border-radius: 20px;
+        background: #3C5795;
+        text-align: center;
+        line-height: 50px;
+        font-size: 1.8em;
+    }
+    .pop_up span:nth-child(4){
+        position: absolute;
+        right: 250px;
+        bottom: -60px;    
+        width: 10px;
+        height: 50px;
+        border-radius: 20px;
+        background: #3C5795;
+        text-align: center;
+        line-height: 50px;
+        font-size: 1.8em;
+    }
+    .main_pop_up .popup_list{
+        padding: 0;
+        margin: 0;
+        display: flex;
+    }
+    .main_pop_up .popup_list li{
+        list-style: none;
+        position: absolute;
+        bottom: -10%;
+        left: 5%;
+        width: 30px;
+        height: 30px;
+        background: rgba(0,0,0,0.1);
+        animation: li-anime 5s linear infinite;
+        z-index: -1;
+    }
+    .main_pop_up .popup_list li:nth-child(2){
+        animation-delay: 2s;
+        width: 50px;
+        height: 50px;
+        left: 20%;
+    }
+    .main_pop_up .popup_list li:nth-child(3){
+        animation-delay: 0.6s;
+        width: 20px;
+        height: 20px;
+        left: 60%;
+        left: 60%;
+    }
+    .main_pop_up .popup_list li:nth-child(4){
+        animation-delay: 1.3s;
+        width: 30px;
+        height: 30px;
+        left: 90%;
+    }
+    .main_pop_up .popup_list li:nth-child(5){
+        animation-delay: 1.3s;
+        width: 30px;
+        height: 30px;
+        left: 50%;
+    }
+
 @media (max-width :500px){
     .start-begin{
         display: inline-block;
@@ -746,7 +1063,7 @@ h1{
         color: #c8c8c8;
         
     }
-    .my_works .thumb .fath{
+    /*.my_works .thumb .fath{
         justify-content: center;
         align-items: center;
         display: flex;
@@ -1060,7 +1377,7 @@ h1{
     }
     .pop_up{
         width: 90%;
-        height: 220px;
+        height: 300px;
         position: fixed;
         top: 50%;
         left: 50%;
@@ -1080,15 +1397,27 @@ h1{
         margin-top: -10px;
         line-height: 50px;
     }
-    .pop_up p{
+    .pop_up .p1{
         width: 100%;
-        height: 200px;
+        height: 300px;
         background: #3C5795;
         margin-top: 10px;
         font-size: 1.1em;
         line-height: 25px;
         font-family: b;
         
+    }
+    .pop_up .p2{
+        position: absolute;
+        bottom: -50px;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
+    .pop_up h3{
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%,-50%);
     }
     .pop_up span:nth-child(1){
         position: absolute;
